hermon/archive/base-kustomize/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana-oss@sha256:e932bd6ed0e026595b08483cd0141e5103e1ab7ff8604839ff899b8dc54cabcb
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: datasource-config
              mountPath: /etc/grafana/provisioning/datasources/hermon-timescale.yaml
              subPath: hermon-timescale.yaml
            - name: dashboard-provider-config
              mountPath: /etc/grafana/provisioning/dashboards/hermon-dashboards.yaml
              subPath: hermon-dashboards.yaml
            - name: dashboard-data
              mountPath: /var/lib/grafana/dashboards
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 10
            failureThreshold: 90
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: grafana-storage
          emptyDir: {}
        - name: datasource-config
          configMap:
            name: grafana-datasource-config
        - name: dashboard-provider-config
          configMap:
            name: grafana-dashboard-provider-config
        - name: dashboard-data
          configMap:
            name: grafana-dashboard-data
